--- a/rover/English.lproj/MainMenu.xib
+++ b/rover/English.lproj/MainMenu.xib
@@ -8,8 +8,8 @@
 		<string key="IBDocument.HIToolboxVersion">353.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="372"/>
 			<integer value="57"/>
+			<integer value="372"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1927,19 +1927,19 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
-						<string key="label">value: orientation.direction</string>
+						<string key="label">value: orientation.direction.name</string>
 						<reference key="source" ref="302663880"/>
 						<reference key="destination" ref="814687858"/>
 						<object class="NSNibBindingConnector" key="connector">
 							<reference key="NSSource" ref="302663880"/>
 							<reference key="NSDestination" ref="814687858"/>
-							<string key="NSLabel">value: orientation.direction</string>
+							<string key="NSLabel">value: orientation.direction.name</string>
 							<string key="NSBinding">value</string>
-							<string key="NSKeyPath">orientation.direction</string>
+							<string key="NSKeyPath">orientation.direction.name</string>
 							<int key="NSNibBindingConnectorVersion">2</int>
 						</object>
 					</object>
-					<int key="connectionID">516</int>
+					<int key="connectionID">520</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -2533,8 +2533,8 @@
 							<reference ref="802799483"/>
 							<reference ref="922711242"/>
 							<reference ref="302663880"/>
-							<reference ref="918730711"/>
 							<reference ref="5795249"/>
+							<reference ref="918730711"/>
 						</object>
 						<reference key="parent" ref="972006081"/>
 					</object>
@@ -3479,7 +3479,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">516</int>
+			<int key="maxID">520</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
